--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/jordanlitsas/sit725-2021-t2-pra43#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "circular-json": "^0.5.9",
     "express": "^4.17.1",
+    "json": "^11.0.0",
     "mongodb": "^4.1.0",
     "reload": "^3.2.0"
   }
