Mongoose half implem.. DB View & MVC  complete.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "json": "^11.0.0",
     "mongodb": "^4.1.0",
+    "mongoose": "^5.13.7",
     "reload": "^3.2.0"
   }
 }
