--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "json": "^11.0.0",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
-    "reload": "^3.2.0"
+    "reload": "^3.2.0",
+    "sqlite3": "^5.0.2"
   }
 }
