--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sit725-2021-t2-prac6",
+  "name": "portfolio",
   "version": "1.0.0",
-  "description": "prac6",
+  "description": "portfolio",
   "main": "server.js",
   "scripts": {
     "test": "mocha --reporter spec",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jordanlitsas/sit725-2021-t2-prac6.git"
+    "url": "git+https://github.com/jordanlitsas/portfolio.git"
   },
   "author": "Jordan Litsas",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jordanlitsas/sit725-2021-t2-prac6/issues"
+    "url": "https://github.com/jordanlitsas/portfolio/issues"
   },
-  "homepage": "https://github.com/jordanlitsas/sit725-2021-t2-prac6#readme",
+  "homepage": "https://github.com/jordanlitsas/portfolio#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
