--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "circular-json": "^0.5.9",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "json": "^11.0.0",
     "mocha": "^9.1.0",
@@ -29,5 +30,8 @@
     "reload": "^3.2.0",
     "socket.io": "^4.2.0",
     "sqlite3": "^5.0.2"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
